new(bundle): use of jlink to build an app that does not require a third-tier JVM